// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detail-spot component 1`] = `
<DocumentFragment>
  <section
    class="css-w1nd5a-DetailSpot"
  >
    <form
      class="css-1ukvpoh-DetailSpot"
    >
      <div
        class="css-1p4pucu-DetailSpot"
      >
        <h2>
          Details
        </h2>
      </div>
      <hr />
      <div
        class="css-w40flo-Spinner"
      >
        <div
          class="css-lehx5n-Spinner"
        />
        <div
          class="css-wk0iwg-Spinner"
        />
        <div
          class="css-1xsj7ka-Spinner"
        />
      </div>
      <fieldset
        class="css-1xxup3v-DetailSpot"
      >
        <button
          class="css-u9qp7f-DetailSpot"
          type="button"
        >
          Close
        </button>
      </fieldset>
    </form>
  </section>
</DocumentFragment>
`;

exports[`detail-spot component 2`] = `
<DocumentFragment>
  <section
    class="css-w1nd5a-DetailSpot"
  >
    <form
      class="css-1ukvpoh-DetailSpot"
    >
      <div
        class="css-1p4pucu-DetailSpot"
      >
        <h2>
          Details
        </h2>
        <svg
          aria-label="Button with icon indicate spot is not favorite for you"
          class="css-wez6tj-DetailSpot"
          fill="currentColor"
          height="1em"
          role="button"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
          />
        </svg>
      </div>
      <hr />
      <fieldset
        class="css-1ihc67e"
      >
        <label
          class="css-19qo4af"
        >
          Name
        </label>
        <div
          class="css-1k3c23m"
        >
          <label>
            Curayacu Querida Comidas Tipicas
          </label>
        </div>
      </fieldset>
      <fieldset
        class="css-1ihc67e"
      >
        <label
          class="css-19qo4af"
        >
          Address
        </label>
        <div
          class="css-1k3c23m"
        >
          <label>
            Avenida Santa Rosa 1561, San Martín de Porres
          </label>
        </div>
      </fieldset>
      <fieldset
        class="css-1ihc67e"
      >
        <label
          class="css-19qo4af"
        >
          Telephone
        </label>
        <div
          class="css-1k3c23m"
        >
          <label>
            Not Information
          </label>
        </div>
      </fieldset>
      <fieldset
        class="css-1ihc67e"
      >
        <label
          class="css-19qo4af"
        >
          Rating
        </label>
        <div
          class="css-1k3c23m"
        >
          <label>
            4.7
          </label>
        </div>
      </fieldset>
      <fieldset
        class="css-1xxup3v-DetailSpot"
      >
        <label
          class="css-6ius79-DetailSpot"
        >
          Schedule
        </label>
        <div
          class="css-nzcmyo-DetailSpot"
        >
          <label>
            Not Information about schedule
          </label>
        </div>
      </fieldset>
      <fieldset
        class="css-1xxup3v-DetailSpot"
      >
        <button
          class="css-u9qp7f-DetailSpot"
          type="button"
        >
          Close
        </button>
      </fieldset>
    </form>
  </section>
</DocumentFragment>
`;
